Mudanças no front, add gráfico linhas (alterar query)
Co-authored-by: André Alves <andre-alves77@users.noreply.github.com>

--- a/templates/index/dashboard.html
+++ b/templates/index/dashboard.html
@@ -72,28 +72,43 @@
     <div class="row">
 
         <!-- Gráfico de uso médio por zona -->
-        <div class="card shadow mb-4">
-            <div class="card-header">
-                Uso Médio por Zona
+        <div class="col-md-6">
+            <div class="card shadow mb-4">
+                <div class="card-header">
+                    Uso Médio por Zona
+                </div>
+                <div class="card-body">
+                    <div id="div-grafico-uso-medio-zona"></div>
+                </div>
             </div>
-		    <div class="card-body">
-			    <div id="div-grafico-uso-medio-zona"></div>
-		    </div>
-	    </div>
+        </div>
+
+        <div class="col-md-6">
+            <div class="card shadow mb-4">
+                <div class="card-header">
+                    Uso Médio por Hora no Período
+                </div>
+                <div class="card-body">
+                    <div id="div-grafico-uso-medio-hora"></div>
+                </div>
+            </div>
+        </div>
 
     </div>
 
     <div class="row">
 
         <!-- Gráfico de fluxo -->
-        <div class="card shadow mb-4">
-            <div class="card-header">
-                Fluxo de Entrada por Dia
+         <div class="col-md-6">
+            <div class="card shadow mb-4">
+                <div class="card-header">
+                    Fluxo de Entrada por Dia
+                </div>
+                <div class="card-body">
+                    <div id="div-grafico-consolidado-dia-mes"></div>
+                </div>
             </div>
-		    <div class="card-body">
-			    <div id="div-grafico-consolidado-dia-mes"></div>
-		    </div>
-	    </div>
+        </div>
 
     </div>
 
