--- a/templates/layout.html
+++ b/templates/layout.html
@@ -89,7 +89,7 @@
 <a class="text-white text-decoration-none bg-dark py-2 px-3" href="{{ url_for('sobre') }}">Sobre</a>
 	</div>
 	<div class="d-flex align-items-center border-start ">		
-		<a class="btn rounded-0 px-3 fw-normal fs-5 py-4" href="{{ url_for('login') }}">Log in</a>
+		<a class="btn rounded-0 px-3 fw-normal fs-5 py-4" href="{{ url_for('login') }}">Entrar</a>
 		<a class="btn text-white bg-dark border-start rounded-0 px-3 fw-normal fs-5 py-4" href="{{ url_for('dashboard') }}">Demais Análises</a>
 	</div>
   </div>
@@ -108,15 +108,12 @@
         <li><a class="nav-link text-white bg-dark rounded px-2" href="{{ url_for('sobre') }}">Sobre</a></li>
       </ul>
       <div class="d-flex">
-        <a class="btn rounded-0 px-3 fw-normal fs-5 py-2 me-2" href="{{ url_for('login') }}">Log in</a>
+        <a class="btn rounded-0 px-3 fw-normal fs-5 py-2 me-2" href="{{ url_for('login') }}">Entrar</a>
         <a class="btn text-white bg-dark rounded-0 px-3 fw-normal fs-5 py-2" href="{{ url_for('dashboard') }}">Demais Análises</a>
       </div>
     </div>
   </div>
 </nav>
-
-
-
 		{% endif %}
 
 		<div class="conteudo">
