novas queries e quickfix dashboard

--- a/templates/index/dashboard.html
+++ b/templates/index/dashboard.html
@@ -35,33 +35,35 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-md-3">
-        <div class="card-index text-center p-3">
-            <div class="big-number-label">Total de Visitas</div>
-            <div class="big-number">1,248</div>
-            <small class="text-success"><i class="fas fa-arrow-up"></i> 12% em relação ao período anterior</small>
+<div class="container-fluid"> 
+    <div class="row">
+        <div class="col-md-3">
+            <div class="card-index text-center p-3">
+                <div class="big-number-label">Total de Visitas</div>
+                <div class="big-number">1,248</div>
+                <small class="text-success"><i class="fas fa-arrow-up"></i> 12% em relação ao período anterior</small>
+            </div>
         </div>
-    </div>
-    <div class="col-md-3">
-        <div class="card-index text-center p-3">
-            <div class="big-number-label">Zona Mais Movimentada</div>
-            <div class="big-number">Zona 2</div>
-            <small>Musculação - 35% do total</small>
+        <div class="col-md-3">
+            <div class="card-index text-center p-3">
+                <div class="big-number-label">Zona Mais Movimentada</div>
+                <div class="big-number">Zona 2</div>
+                <small>Musculação - 35% do total</small>
+            </div>
         </div>
-    </div>
-    <div class="col-md-3">
-        <div class="card-index text-center p-3">
-            <div class="big-number-label">Horário de Pico</div>
-            <div class="big-number">18h-20h</div>
-            <small>28% das visitas diárias</small>
+        <div class="col-md-3">
+            <div class="card-index text-center p-3">
+                <div class="big-number-label">Horário de Pico</div>
+                <div class="big-number">18h-20h</div>
+                <small>28% das visitas diárias</small>
+            </div>
         </div>
-    </div>
-    <div class="col-md-3">
-        <div class="card-index text-center p-3">
-            <div class="big-number-label">Taxa de Ocupação</div>
-            <div class="big-number">68%</div>
-            <small class="text-warning"><i class="fas fa-arrow-down"></i> 5% em relação ao período anterior</small>
+        <div class="col-md-3">
+            <div class="card-index text-center p-3">
+                <div class="big-number-label">Taxa de Ocupação</div>
+                <div class="big-number">68%</div>
+                <small class="text-warning"><i class="fas fa-arrow-down"></i> 5% em relação ao período anterior</small>
+            </div>
         </div>
     </div>
 </div>
