finalização do dashboard, inserção e consolidação do segundo heatmap, mudanças menores

--- a/templates/index/consolidado.html
+++ b/templates/index/consolidado.html
@@ -20,11 +20,10 @@
 {% block body %}
 
 <div class="container-fluid">
-	<h1 class="my-4 text-center">Consolidado de Ocupação Máxima</h1>
 	
 	<div class="row">
         <div class="col-md-8 offset-md-2">
-            <div class="card shadow mb-4">
+            <div class="card shadow mt-4 mb-2">
                 <div class="card-body">
                     <form id="form">
                         <div class="row">
@@ -64,8 +63,11 @@
             </div>
         </div>
     </div>
-
-	<div class="card shadow mb-4">
+	
+	<div class="card shadow mt-4">
+		<div class="card-header">
+            Heatmap Consolidado de Ocupação Máxima
+        </div>
 		<div class="card-body">
 			<div id="div-heatmap"></div>
 		</div>
