--- a/templates/index/dashboard.html
+++ b/templates/index/dashboard.html
@@ -37,32 +37,22 @@
 
 <div class="container-fluid"> 
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-4">
             <div class="card-index text-center p-3">
                 <div class="big-number-label">Total de Visitas</div>
-                <div class="big-number">1,248</div>
-                <small class="text-success"><i class="fas fa-arrow-up"></i> 12% em relação ao período anterior</small>
+                <div class="big-number" id="big-total-visitas">-</div>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
             <div class="card-index text-center p-3">
                 <div class="big-number-label">Zona Mais Movimentada</div>
-                <div class="big-number">Zona 2</div>
-                <small>Musculação - 35% do total</small>
+                <div class="big-number" id="big-zona-mais-movimentada">-</div>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
             <div class="card-index text-center p-3">
                 <div class="big-number-label">Horário de Pico</div>
-                <div class="big-number">18h-20h</div>
-                <small>28% das visitas diárias</small>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card-index text-center p-3">
-                <div class="big-number-label">Taxa de Ocupação</div>
-                <div class="big-number">68%</div>
-                <small class="text-warning"><i class="fas fa-arrow-down"></i> 5% em relação ao período anterior</small>
+                <div class="big-number" id="big-horario-pico">-</div>
             </div>
         </div>
     </div>
@@ -73,11 +63,10 @@
 
     <div class="row">
 
-        <!-- Gráfico de uso médio por zona -->
         <div class="col-md-6">
             <div class="card shadow mb-4">
                 <div class="card-header">
-                    Uso Médio por Zona
+                    Média de Pessoas por Zona em Horário Comercial (07:00-20:00)
                 </div>
                 <div class="card-body">
                     <div id="div-grafico-uso-medio-zona"></div>
@@ -88,7 +77,7 @@
         <div class="col-md-6">
             <div class="card shadow mb-4">
                 <div class="card-header">
-                    Uso Médio por Hora no Período
+                    Pico de Pessoas por Hora no Período 
                 </div>
                 <div class="card-body">
                     <div id="div-grafico-uso-medio-hora"></div>
@@ -100,8 +89,7 @@
 
     <div class="row">
 
-        <!-- Gráfico de fluxo -->
-         <div class="col-md-6">
+         <div class="col-md-12">
             <div class="card shadow mb-4">
                 <div class="card-header">
                     Fluxo de Entrada por Dia
