--- a/templates/layout.html
+++ b/templates/layout.html
@@ -86,6 +86,7 @@
 	<div id="links">
 <a class="text-black text-decoration-none py-2 px-3" href="{{ url_for('index') }}">Início</a>
 <a class="text-black text-decoration-none py-2 px-3" href="{{ url_for('tempoReal') }}">Tempo Real</a>
+<a class="text-black text-decoration-none py-2 px-3" href="{{ url_for('consolidado') }}">Análise por Zona</a>
 <a class="text-white text-decoration-none bg-dark py-2 px-3" href="{{ url_for('sobre') }}">Sobre</a>
 	</div>
 	<div class="d-flex align-items-center border-start ">		
@@ -105,6 +106,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li><a class="nav-link text-black" href="{{ url_for('index') }}">Início</a></li>
         <li><a class="nav-link text-black" href="{{ url_for('tempoReal') }}">Tempo Real</a></li>
+		<li><a class="nav-link text-black" href="{{ url_for('consolidado') }}">Análise por Zona</a></li>
         <li><a class="nav-link text-white bg-dark rounded px-2" href="{{ url_for('sobre') }}">Sobre</a></li>
       </ul>
       <div class="d-flex">
