--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -1,4 +1,20 @@
 {% extends 'layout.html' %}
+{% block head %}
+
+<style>
+.limitador {
+	max-width: 1920px;
+	margin: 0px auto;
+
+	/* Para fazer o rodapé ficar sempre na parte inferior da página ;) */
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+}
+</style>
+
+{% endblock %}
 
 {% block body %}
 <section
@@ -18,14 +34,14 @@
     </div>
   </div>
 
-  <div class="coins-container position-absolute  top-0 start-0 w-100 h-100">
+  <!-- <div class="coins-container position-absolute  top-0 start-0 w-100 h-100">
     <div class="coin" data-speed="0.05" style="top: 10%; left: 20%">💰</div>
     <div class="coin" data-speed="0.08" style="top: 40%; left: 75%">💰</div>
     <div class="coin" data-speed="0.03" style="top: 70%; left: 30%">💰</div>
     <div class="coin" data-speed="0.10" style="top: 10%;left: 90%;">💰</div>
     <div class="coin" data-speed="0.06" style="top: 91%; left: 80%">💰</div>
     <div class="coin" data-speed="0.04" style="top: 80%; left: 15%">💰</div>
-  </div>
+  </div> -->
 </section>
 
 <section class="container-fluid border-bottom">
